# dpdk

./: .gitignore  BUILD.bazel  MODULE.bazel
config/: BUILD.bazel  rte_config.bzl  rte_config.tpl
drivers/common/mlx5/: mlx5_autoconf.h
drivers/net/mlx4/: mlx4_autoconf.h
