load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "dpdk",
    srcs = glob(
        include = [
            "drivers/**/*.c",
            "drivers/**/*.h",
            "lib/**/*.c", 
            "lib/**/*.h",
        ],
        exclude = [
            "**/*_neon.c",
            "**/*_neon.h",
            "**/*_altivec.c",

            "drivers/net/virtio/virtio_rxtx_simple_sse.c",
            "drivers/net/virtio/virtio_rxtx_simple_altivec.c",
            "drivers/net/virtio/virtio_rxtx_packed_neon.h",
            "drivers/net/virtio/virtio_rxtx_packed.c",

            "drivers/net/mlx5/mlx5_rxtx_vec_null.c",
            "drivers/net/mlx5/mlx5_flow_hw_stubs.c",
            "drivers/common/mlx5/windows/**",
            "drivers/net/mlx5/windows/**",

            "drivers/event/dlb2/dlb2_sse.c",
            "drivers/event/dlb2/dlb2_avx512.c",

            "drivers/net/enic/**",
            "drivers/net/nfp/**",
            "drivers/net/mvneta/**",
            "drivers/net/mvpp2/**",
            "drivers/net/sfc/**",
            "drivers/net/tap/**",
            "drivers/net/qede/**",
            "drivers/net/ntnic/**",
            "drivers/net/nfb/**",
            "drivers/net/bnxt/**",
            "drivers/net/hns3/**",
            "drivers/net/intel/ice/**",
            "drivers/net/intel/cpfl/**",
            "drivers/net/intel/i40e/i40e_rxtx_vec_altivec.c",
            "drivers/net/pcap/**",

            # AF_XDP FUCK FUCK FUCK, you're next on the list
            # "drivers/net/af_xdp/**",

            "drivers/net/bnxt/bnxt_rxtx_vec_neon.c",
            "drivers/net/hns3/hns3_rxtx_vec_neon.h",
            "drivers/net/mlx5/mlx5_rxtx_vec_neon.h",
            "drivers/net/ngbe/ngbe_rxtx_vec_neon.c",
            "drivers/net/intel/iavf/iavf_rxtx_vec_neon.c",
            "drivers/net/intel/i40e/i40e_rxtx_vec_neon.c",
            "drivers/net/intel/ixgbe/ixgbe_rxtx_vec_neon.c",
            "drivers/net/txgbe/txgbe_rxtx_vec_neon.c",
            "drivers/net/octeon_ep/cnxk_ep_rx_neon.c",

            "drivers/raw/ifpga/**",
            "drivers/ml/**",
            "drivers/compress/isal/**",
            "drivers/compress/qat/**",
            "drivers/crypto/**",
            "drivers/crypto/ipsec_mb/**",
            "drivers/crypto/mvsam/**",
            "drivers/crypto/armv8/**",
            "drivers/power/amd_uncore/**",
            "drivers/gpu/cuda/**",

            "drivers/common/dpaax/dpaax_logs.h",
            "drivers/common/mvep/**",
            "drivers/bus/**",
            "drivers/bus/fslmc/qbman/qbman_debug.c",
            "drivers/bus/pci/bsd/pci.c",
            "drivers/bus/pci/windows/**",
            "drivers/net/pcap/pcap_osdep_windows.c",

            "lib/distributor/rte_distributor_match_generic.c",
            "lib/eal/linux/vduse.h", # vduse.h is not used in the build
            "lib/vhost/vduse.c",
            "lib/bpf/bpf_convert.c", # libpcap is missing
            "lib/bpf/bpf_load_elf.c", # libelf is missing
            "lib/acl/acl_run_sse.c",  # x86 specific
            "lib/acl/acl_run_altivec.c",  # PPC specific
            "lib/acl/acl_run_altivec.h",  # x86 specific
            "lib/acl/acl_run_avx2.c", # x86 AVX2 specific
            "lib/acl/acl_run_neon.c", # ARM specific
            "lib/acl_run_altivec.c",  # PPC_64 specific
            "lib/acl/acl_run_neon.h", # ARM specific
            "lib/acl/acl_run_avx512.c", # x86 AVX512-specific
            "lib/acl/acl_run_avx512x16.h", # x86 AVX512-specific
            "lib/member/rte_member_sketch_avx512.c", # x86 AVX512-specific
            "lib/member/rte_member_sketch_avx512.h", # x86 AVX512-specific
            "lib/member/rte_member_sketch_avx2.c", # x86 AVX2-specific
            "lib/member/rte_member_sketch_avx2.h", # x86 AVX2-specific
            "lib/mldev/mldev_utils_neon.c", # ARM specific
            "lib/mldev/mldev_utils_neon.h", # ARM specific
            "lib/mldev/mldev_utils_neon_bfloat16.c", # ARM specific
            "lib/mldev/mldev_utils_neon_bfloat16.h", # ARM specific
            "lib/net/crc_neon.c", # ARM specific
            "lib/net/crc_neon.h", # ARM specific
            "lib/net/net_crc_neon.c", # ARM specific
            "lib/net/net_crc_neon.h", # ARM specific
            "lib/net/net_crc_avx512.c", # x86 AVX512-specific
            "lib/net/net_crc_avx512.h", # x86 AVX512-specific
            "lib/eal/arm/**",
            "lib/eal/windows/**",
            "drivers/bus/fslmc/qbman/qbman_debug.c",
            "lib/eal/freebsd/**",
            "lib/eal/loongarch/**",
            "lib/eal/ppc/**",
            "lib/eal/riscv/**",
            "lib/cmdline/cmdline_os_windows.c",
        ]
    ),
    hdrs = glob([
        "drivers/**/*.h",
        "lib/**/*.h",
        "app/test-pmd/**/*.h",
    ]),
    deps = [
        # "//:lib",
        "//config",
        "@com_github_rdma//:mlx5dv",
        "@com_github_libbpf//:libbpf",
        "@com_github_libbpf//:libbpf_path",
        "@com_github_libxdp//:libxdp",
        "@com_github_zlib//:zlib",
        "@com_github_uadk//:uadk",
        "@com_github_numactl//:numactl",
    ],
    includes = [
        "app/test-pmd",
        "drivers/net/intel/ixgbe",
        "drivers/raw/ifpga",
        "drivers/net/intel/i40e/",
        "drivers/net/bnxt/hcapi/cfa_v3/tim/include",
        "drivers/net",
        "drivers/net/tap",
        "drivers/net/virtio",
        "drivers/net/intel/iavf",
        "drivers/net/mlx5",
        "drivers/net/mlx5/linux/",
        "drivers/net/ntnic/nthw/flow_api",
        "drivers/net/ntnic",
        "drivers/net/bnxt/hcapi/cfa_v3/bld/include",
        "drivers/net/bnxt/hcapi/cfa_v3/bld/include/host",
        "drivers/net/bnxt/tf_ulp/generic_templates",
        "drivers/net/bnxt/hcapi/cfa_v3/include",
        "drivers/net/nfb",
        "drivers/net/pfe/base",
        "drivers/net/bnxt",
        "drivers/net/ngbe/base",
        "drivers/net/octeontx",
        "drivers/net/bnxt/tf_core/v3",
        "drivers/net/ntnic/nthw/supported",
        "drivers/net/bnxt/hcapi/cfa",
        "drivers/net/gve/base",
        "drivers/net/nfp",
        "drivers/net/ntnic/nthw/model",
        "drivers/net/bonding",
        "drivers/net/pfe",
        "drivers/net/ena/base/ena_defs",
        "drivers/net/enic/base",
        "drivers/net/bnxt/tf_core",
        "drivers/net/dpaa2/mc",
        "drivers/net/intel/iavf/base",
        "drivers/net/dpaa2",
        "drivers/common/dpaax",
        "drivers/net/dpaa",
        "drivers/net/ntnic/nthw/core/include",
        "drivers/net/enic",
        "drivers/net/ena/base",
        "lib/eal/linux/",
        "drivers/net/ntnic/ntutil",
        "drivers",
        "drivers/ml",
        "drivers/ml/cnxk",
        "drivers/event",
        "drivers/net/ntnic/nthw",
        "drivers/event/octeontx",
        "drivers/event/dpaa2",
        "drivers/event/skeleton",
        "drivers/event/sw",
        "drivers/event/dsw",
        "drivers/event/dpaa",
        "drivers/event/dlb2",
        "drivers/event/dlb2/pf",
        "drivers/event/dlb2/pf/base",
        "drivers/event/opdl",
        "drivers/event/cnxk",
        "drivers/event/cnxk/deq",
        "drivers/event/cnxk/deq/cn20k",
        "drivers/event/cnxk/deq/cn9k",
        "drivers/event/cnxk/deq/cn10k",
        "drivers/event/cnxk/tx",
        "drivers/event/cnxk/tx/cn20k",
        "drivers/event/cnxk/tx/cn9k",
        "drivers/event/cnxk/tx/cn10k",
        "drivers/net/gve",
        "drivers/net/cnxk",
        "drivers/net/bnxt/tf_ulp",
        "drivers/net/intel/idpf",
        "drivers/net/ntnic/ntlog",
        "drivers/net/ntnic/include",
        "drivers/power",
        "drivers/power/amd_uncore",
        "drivers/power/kvm_vm",
        "drivers/power/amd_pstate",
        "drivers/power/intel_uncore",
        "drivers/power/intel_pstate",
        "drivers/power/cppc",
        "drivers/power/acpi",
        "drivers/vdpa",
        "drivers/vdpa/ifc",
        "drivers/vdpa/ifc/base",
        "drivers/vdpa/sfc",
        "drivers/vdpa/mlx5",
        "drivers/vdpa/nfp",
        "drivers/common",
        "drivers/common/sfc_efx",
        "drivers/common/sfc_efx/base",
        "drivers/common/mvep",
        "drivers/common/octeontx",
        "drivers/common/dpaax/caamflib",
        "drivers/common/dpaax/caamflib/desc",
        "drivers/common/dpaax/caamflib/rta",
        "drivers/common/zsda",
        "drivers/common/mlx5",
        "drivers/common/mlx5/linux",
        "drivers/common/ionic",
        "drivers/common/qat",
        "drivers/common/qat/qat_adf",
        "drivers/common/qat/dev",
        "drivers/common/cpt",
        "drivers/common/cnxk",
        "drivers/common/cnxk/hw",
        "drivers/common/nfp",
        "drivers/common/nitrox",
        "drivers/bus",
        "drivers/bus/cdx",
        "drivers/bus/uacce",
        "drivers/bus/auxiliary",
        "drivers/bus/auxiliary/linux",
        "drivers/bus/pci",
        "drivers/bus/pci/bsd",
        "drivers/bus/pci/linux",
        "drivers/bus/platform",
        "drivers/bus/dpaa",
        "drivers/bus/dpaa/include",
        "drivers/bus/dpaa/base",
        "drivers/bus/dpaa/base/qbman",
        "drivers/bus/dpaa/base/fman",
        "drivers/bus/ifpga",
        "drivers/bus/vdev",
        "drivers/bus/vmbus",
        "drivers/bus/vmbus/linux",
        "drivers/bus/fslmc",
        "drivers/bus/fslmc/qbman",
        "drivers/bus/fslmc/qbman/include",
        "drivers/bus/fslmc/mc",
        "drivers/bus/fslmc/portal",
        "drivers/regex",
        "drivers/regex/cn9k",
        "drivers/regex/mlx5",
        "drivers/raw",
        "drivers/raw/cnxk_bphy",
        "drivers/raw/cnxk_rvu_lf",
        "drivers/raw/dpaa2_cmdif",
        "drivers/raw/skeleton",
        "drivers/raw/gdtc",
        "drivers/raw/cnxk_gpio",
        "drivers/raw/ntb",
        "drivers/baseband",
        "drivers/baseband/null",
        "drivers/baseband/la12xx",
        "drivers/baseband/fpga_lte_fec",
        "drivers/baseband/turbo_sw",
        "drivers/baseband/acc",
        "drivers/baseband/fpga_5gnr_fec",
        "drivers/compress",
        "drivers/compress/octeontx",
        "drivers/compress/octeontx/include",
        "drivers/compress/zsda",
        "drivers/compress/mlx5",
        "drivers/compress/qat",
        "drivers/compress/qat/dev",
        "drivers/compress/uadk",
        "drivers/compress/nitrox",
        "drivers/compress/zlib",
        "drivers/crypto",
        "drivers/crypto/openssl",
        "drivers/crypto/null",
        "drivers/crypto/scheduler",
        "drivers/crypto/armv8",
        "drivers/crypto/octeontx",
        "drivers/crypto/ccp",
        "drivers/crypto/mvsam",
        "drivers/crypto/bcmfs",
        "drivers/crypto/bcmfs/hw",
        "drivers/crypto/dpaa2_sec",
        "drivers/crypto/dpaa2_sec/mc",
        "drivers/crypto/caam_jr",
        "drivers/crypto/mlx5",
        "drivers/crypto/ionic",
        "drivers/crypto/qat",
        "drivers/crypto/qat/dev",
        "drivers/crypto/ipsec_mb",
        "drivers/crypto/virtio",
        "drivers/crypto/virtio/virtio_user",
        "drivers/crypto/uadk",
        "drivers/crypto/dpaa_sec",
        "drivers/crypto/cnxk",
        "drivers/crypto/nitrox",
        "drivers/dma",
        "drivers/dma/dpaa2",
        "drivers/dma/skeleton",
        "drivers/dma/odm",
        "drivers/dma/idxd",
        "drivers/dma/hisilicon",
        "drivers/dma/dpaa",
        "drivers/dma/cnxk",
        "drivers/dma/ioat",
        "drivers/mempool",
        "drivers/mempool/ring",
        "drivers/mempool/octeontx",
        "drivers/mempool/dpaa2",
        "drivers/mempool/bucket",
        "drivers/mempool/stack",
        "drivers/mempool/dpaa",
        "drivers/mempool/cnxk",
        "drivers/gpu",
        "drivers/gpu/cuda",

        "lib/eal/common",
        "lib/eal/include",
        "lib/eal/linux/include",
        "lib/eal/x86/include",
        "lib/eal/include/generic",
        "lib/log",
        "lib/kvargs", # eal depends on kvargs
        "lib/argparse",
        "lib/telemetry", # basic info querying
        "lib/ptr_compress",
        "lib/ring",
        "lib/rcu", # rcu depends on ring
        "lib/mempool",
        "lib/mbuf",
        "lib/net",
        "lib/meter",
        "lib/ethdev",
        "lib/pci", # core
        "lib/cmdline",
        "lib/metrics", # bitrate/latency stats depends on this
        "lib/hash",    # efd depends on this
        "lib/timer",   # eventdev depends on this
        "lib/acl",
        "lib/bbdev",
        "lib/bitratestats",
        "lib/bpf",
        "lib/cfgfile",
        "lib/compressdev",
        "lib/cryptodev",
        "lib/distributor",
        "lib/dmadev",  # eventdev depends on this
        "lib/efd",
        "lib/eventdev",
        "lib/dispatcher", # dispatcher depends on eventdev
        "lib/gpudev",
        "lib/gro",
        "lib/gso",
        "lib/ip_frag",
        "lib/jobstats",
        "lib/latencystats",
        "lib/lpm",
        "lib/member",
        "lib/pcapng",
        "lib/power",
        "lib/rawdev",
        "lib/regexdev",
        "lib/mldev",
        "lib/rib",
        "lib/reorder",
        "lib/sched",
        "lib/security",
        "lib/stack",
        "lib/vhost",
        "lib/ipsec", # ipsec lib depends on net, crypto and security
        "lib/pdcp", # pdcp lib depends on crypto and security
        "lib/fib", #fib lib depends on rib
        "lib/port", # pkt framework libs which use other libs from above
        "lib/pdump", # pdump lib depends on bpf
        "lib/table",
        "lib/pipeline",
        "lib/graph",
        "lib/node",
    ],
    visibility = ["//visibility:public"],
    alwayslink = 1,
    copts = [
        "-mrtm",
        "-D_GNU_SOURCE",
        "-DRTE_EXEC_ENV_LINUX",
        "-mavx512f", "-mavx512dq", "-mavx512bw", "-msse4.2",
        '-std=c11',
        "-mpclmul",
        '-Wno-strict-prototypes',
        '-D_BSD_SOURCE',
        '-D_DEFAULT_SOURCE',
        '-D_XOPEN_SOURCE=600',
        "-mcrc32",
        "-Wvisibility",
        "-Wno-address-of-packed-member",
        "-Wno-#pragma-messages",
    ],
)
